# cultivating-alpha

./: 1. Get Data and draw Indicators.ipynb  README.md  pyproject.toml  stats_in_finance.ipynb
