[tool.poetry]
name = "datascience"
version = "0.1.0"
description = ""
authors = ["Piotr Yordanov <48773775+piotryordanov@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
